--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=your-uri
-JWT_SECRET=your-secret
+MONGO_URI=mongodb+srv://renali5002_db_user:All88cps!!@cluster1.5bp5cz7.mongodb.net/?appName=Cluster1
+JWT_SECRET=campuscooleventpenn1962jdwkjlfa
